##Text encoding: utf-8

2012-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/group.cc: don't crash when loading a group.

2012-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/poly-line.cc: don't access invalid memory.
	* libs/gcp/application.cc: allow a mesomery inside a reaction.
	* libs/gcp/brackets.cc: allow brackets around a mesomery.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/reaction.cc: allow a mesomery inside a reaction.
	* plugins/paint/selection/bracketstool.cc: fixed an uninitialized data
	issue.

2012-10-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.15.0).
	* libs/gcp/bond.cc: fix squiggle bonds period.
	* plugins/paint/bonds/bondtool.cc: ditto.

2012-09-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/texttool.cc: don't use deprecated goffice function.

2012-09-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: update version to 0.13.98 (0.14 beta 1).
	* docs/help/C/paint/C/gchempaint.xml: updated user doc for 0.14.

2012-09-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/fontsel.ui: fixed layout.

2012-09-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fixed implicit lone pairs count evaluation.
	* libs/gcp/brackets.cc: fixed stoichiometry child position.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/text.cc: avoid crash if an Item is absent.
	* libs/gcu/document.cc: use existing objects when loading.
	* libs/gcugtk/gcuperiodic.c (gcu_periodic_init): don't use deprecated API.
	* libs/gcugtk/ui-builder.cc: ditto.

2012-09-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: enhance undo/redo system.
	* libs/gcu/bond.cc: use existing atoms when loading.
	* libs/gcu/document.cc: cleaned Id translation issues.
	* libs/gcu/document.h: ditto.
	* libs/gcu/object.cc: ditto.
	* plugins/paint/selection/lassotool.cc: fixed undo flip.
